navbar width on small screens fix

--- a/src/index.css
+++ b/src/index.css
@@ -522,7 +522,6 @@ ui.image {
 	position: fixed;
 	margin-left: 91.4%;
 	margin-top: 11%;
-	width: 100%;
 
 	display: flex;
 	flex-direction: row;
@@ -530,7 +529,7 @@ ui.image {
 	justify-content: flex-end;	
 
 	z-index: 4;
-	width: 4.9%;
+	width: auto;
 	background: white;
   }
 
@@ -630,7 +629,6 @@ ui.image {
   .navbar{
 	margin-top: 9%;
 	margin-left: 90vw;
-	width: 8.6%;
   } 
 
   .moreInfo{
